# inspire_gripper

./: .gitignore  README.md
docs/superpowers/plans/: 2026-04-13-inspire-hand-ros2-driver.md
docs/superpowers/specs/: 2026-04-13-inspire-hand-ros2-driver-design.md
src/inspire_description/urdf/: inspire_gripper.urdf.xacro
src/inspire_hand/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
src/inspire_hand/config/: gripper_controllers.yaml
src/inspire_hand/include/inspire_hand/: gripper_system.hpp  protocol.hpp  serial_bus.hpp
src/inspire_hand/launch/: inspire_hand.launch.py
src/inspire_hand/scripts/: cycle_test.sh
src/inspire_hand/src/: gripper_system.cpp  protocol.cpp  serial_bus.cpp  services.cpp
src/inspire_hand/srv/: CalibrateRange.srv  ReadRunState.srv  SaveParams.srv  SetForceThreshold.srv  SetId.srv
src/inspire_hand/test/: test_integration.cpp  test_protocol.cpp
src/inspire_hand/urdf/: inspire_hand.ros2_control.xacro
src/inspire_hand_moveit_config/: CMakeLists.txt  package.xml
src/inspire_hand_moveit_config/config/: inspire_hand.srdf  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml
src/inspire_hand_moveit_config/launch/: demo.launch.py  move_group.launch.py
