<?xml version="1.0"?>
<package format="3">
  <name>inspire_hand</name>
  <version>0.1.0</version>
  <description>ROS2 Jazzy driver for Inspire-Robots EG2-4X2 electric gripper over USB-to-RS485.</description>
  <maintainer email="joe@anitron.local">joe</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>diagnostic_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>parallel_gripper_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>inspire_description</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <hardware_interface plugin="${prefix}/plugin_description.xml"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
