<?xml version="1.0"?>
<package format="3">
  <name>inspire_hand_moveit_config</name>
  <version>0.1.0</version>
  <description>MoveIt 2 configuration for the Inspire EG2-4X2 left gripper.</description>
  <maintainer email="joe@anitron.local">joe</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>inspire_hand</exec_depend>
  <exec_depend>inspire_description</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
